<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.bobo.mytodolist.data.Task" />

        <variable
            name="viewModel"
            type="com.bobo.mytodolist.viewModels.NoteViewModel" />

        <variable
            name="callback"
            type="com.bobo.mytodolist.AddMemoFragment.Callback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.MemoMemo.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="5dp"
                app:navigationIcon="@drawable/ic_detail_back"
                app:title="@string/title_write_memo"
                app:titleTextAppearance="@style/BasicTextStyle.MemoMemo" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/write_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/layout_margin_16"
                android:layout_marginStart="@dimen/layout_margin_16"
                android:layout_marginEnd="@dimen/layout_margin_16"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hint_write_memo"
                android:background="@null"
                android:inputType="textMultiLine|textPersonName" />

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/gmarket_sans_medium"
            android:onClick="@{() -> callback.onAdd()}"
            android:text="@string/fab_label_finish_write"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:icon="@drawable/ic_check"
            app:iconPadding="8dp"
            app:iconTint="@color/white" />

    </LinearLayout>
</layout>
