<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.bobo.mytodolist.data.Task" />

        <variable
            name="viewModel"
            type="com.bobo.mytodolist.viewModels.TaskDetailViewModel" />

        <variable
            name="callback"
            type="com.bobo.mytodolist.TaskDetailFragment.Callback" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".TaskDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.MemoMemo.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_detail_back"
                app:menu="@menu/menu_task_detail"
                app:title="@string/edit_task_name"
                app:titleTextAppearance="@style/BasicTextStyle.MemoMemo"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="140dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:text="@string/edit_task_name"
                    android:textColor="@color/blue"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:hint="@string/write_memo"
                    android:text="@{viewModel.task.name}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_tag_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:text="@string/select_tag"
                    android:textColor="@color/blue"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/hasty"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:onClick="@{(view) -> callback.onChangeColor(view, viewModel.task)}"
                        android:src="@drawable/ic_hasty_task" />


                    <ImageView
                        android:id="@+id/star"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="12dp"
                        android:onClick="@{(view) -> callback.onChangeColor(view, viewModel.task)}"
                        android:src="@drawable/ic_star" />

                    <ImageView
                        android:id="@+id/cart"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="12dp"
                        android:onClick="@{(view) -> callback.onChangeColor(view, viewModel.task)}"
                        android:src="@drawable/ic_shopping_cart" />

                    <ImageView
                        android:id="@+id/pin"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="12dp"
                        android:onClick="@{(view) -> callback.onChangeColor(view, viewModel.task)}"
                        android:src="@drawable/ic_clip" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/gmarket_sans_medium"
            android:onClick="@{() -> callback.onEdit(viewModel.task)}"
            android:text="@string/fab_label_finish_edit"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:icon="@drawable/ic_check"
            app:iconPadding="8dp"
            app:iconTint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
